[gd_scene load_steps=5 format=3 uid="uid://cogporl1xf7x6"]

[ext_resource type="PackedScene" uid="uid://dxbs1wddpywjp" path="res://Assets/Models/vehicles.blend" id="1_u7e3c"]
[ext_resource type="Script" path="res://Scripts/vehiclesprite.gd" id="2_ioidk"]
[ext_resource type="Texture2D" uid="uid://52eajgxvjb8r" path="res://Assets/Models/VehicleTex1.png" id="3_0ci0g"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dd5lb"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_0ci0g")
emission_enabled = true
emission_operator = 1
emission_on_uv2 = true
texture_filter = 1

[node name="vehicles" instance=ExtResource("1_u7e3c")]
transform = Transform3D(-2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 0, 0, 0)
script = ExtResource("2_ioidk")

[node name="Car1" parent="." index="0" groups=["VehicleSprite"]]
visible = false
surface_material_override/0 = SubResource("StandardMaterial3D_dd5lb")

[node name="Car2" parent="." index="2" groups=["VehicleSprite"]]
visible = false
surface_material_override/0 = SubResource("StandardMaterial3D_dd5lb")

[node name="Car3" parent="." index="3" groups=["VehicleSprite"]]
visible = false
surface_material_override/0 = SubResource("StandardMaterial3D_dd5lb")

[node name="Car4" parent="." index="4" groups=["VehicleSprite"]]
visible = false
surface_material_override/0 = SubResource("StandardMaterial3D_dd5lb")
